--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,15 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Sora', sans-serif, monospace;
+  margin: 0;
+  padding: 0;
+  font-family: "Sora", sans-serif, monospace;
 }
 
-html, body {
-    height: 100%;
-    width: 100%;
+html,
+body {
+  height: 100%;
+  width: 100%;
 }
 
 body {
-    -webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
 }
