feat: adding new color

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,6 +16,7 @@
   --color-accent-success: #28a745;
   --color-accent-success-hover: #218838;
   --color-accent-error: #dc3545;
+  --color-red-contrast-error: #d8838c;
   --color-accent-error-hover: #c82333;
   --color-accent-warning: #ffc107;
   --color-accent-warning-hover: #e0a800;
