--- a/src/components/ui/Dashboard/Navbar/Navbar.module.css
+++ b/src/components/ui/Dashboard/Navbar/Navbar.module.css
@@ -98,12 +98,12 @@
 .navLink[href="/login"] {
   margin-top: 1rem;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
-  color: var(--color-accent-error);
+  color: var(--color-red-contrast-error);
 }
 
 .navLink[href="/login"]:hover {
   background-color: rgba(224, 65, 0, 0.1);
-  color: var(--color-accent-error);
+  color: var(--color-red-contrast-error);
   border-left-color: var(--color-accent-error);
 }
 
